--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "autoprefixer": "^10.4.14",
         "axios": "^1.4.0",
         "chart.js": "^4.3.0",
@@ -18,7 +21,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
         "react-icons": "^4.10.1",
-        "react-router-dom": "^6.14.0",
+        "react-router-dom": "^6.14.1",
         "tailwindcss": "^3.3.2"
     },
     "devDependencies": {
